--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		<img src="images/chua75.jpg" alt="chua">
 	</main>
 	<footer>
-		<p> &copy; Gabriel Jastrzebski, 2022 </p>
+		<p> &copy; Gabriel Jastrzebski, 3/9/2022 </p>
 	</footer>
 </body>
 </html>
